--- a/moo/mooedit/langs/protobuf.lang
+++ b/moo/mooedit/langs/protobuf.lang
@@ -20,7 +20,7 @@
  Boston, MA 02111-1307, USA.
 
 -->
-<language id="proto" name="Protobuf" version="2.0" _section="Others">
+<language id="proto" name="Protobuf" version="2.0" _section="Other">
   <metadata>
     <property name="mimetypes">text/x-protobuf</property>
     <property name="globs">*.proto</property>
