--- a/moo/mooedit/langs/php.lang
+++ b/moo/mooedit/langs/php.lang
@@ -6,25 +6,23 @@
  Author: Francesco Gigli <jaramir@aruba.it>
  Copyright (C) 2003 Francesco Gigli <jaramir@aruba.it>
  Copyright (C) 2004 David A Knight <david@ritter.demon.co.uk>
- Copyright (C) 2005 Rowan Lewis <rowanjl@gmail.com>
  Copyright (C) 2006 Steve Frécinaux <steve@istique.net>
  Copyright (C) 2007 Patryk Zawadzki <patrys@pld-linux.org>
  Copyright (C) 2007 Eric Norige <thelema@swbell.net>
  Copyright (C) 2012 Christopher Blay <chris.b.blay@gmail.com>
 
- This library is free software; you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation; either version 2 of the License, or
- (at your option) any later version.
+ GtkSourceView is free software; you can redistribute it and/or
+ modify it under the terms of the GNU Lesser General Public
+ License as published by the Free Software Foundation; either
+ version 2.1 of the License, or (at your option) any later version.
 
- This program is distributed in the hope that it will be useful,
+ GtkSourceView is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ Lesser General Public License for more details.
 
- You should have received a copy of the GNU General Public License
- along with this program; if not, write to the Free Software
- Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ You should have received a copy of the GNU Lesser General Public License
+ along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
 <language id="php" _name="PHP" version="2.0" _section="Scripts">
