--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Vadim Ushakov <igeekless@gmail.com>
 Yevgen Muntyan <emuntyan@users.sourceforge.net>
 Daniel Poelzleithner <mooedit@poelzi.org>
 Lasse Makholm
