Update URLs in configure.ac and README

--- a/README
+++ b/README
@@ -7,9 +7,9 @@ Quark is free software, released under GNU GPL license. See the LICENSE
 file in this distribution for details.
 
 The web site is:
-    FIXME: link
+    https://github.com/sde-gui/qk
 releases are located at:
-    FIXME: link
+    https://github.com/sde-gui/qk/releases
 
 
 Installation
@@ -22,8 +22,8 @@ Bug reports and contact
 =======================
 
 Report bugs and file feature requests in the Quark bug tracker at
-{FIXME: link} . You can
-also send an email to vadim.ush@gmail.com if you don't feel
+https://github.com/sde-gui/qk/issues .
+You can also send an email to vadim.ush@gmail.com if you don't feel
 like using the bug tracker, or have any questions/comments.
 
 
