--- a/moo/mooedit/langs/d.lang
+++ b/moo/mooedit/langs/d.lang
@@ -26,7 +26,7 @@
 	Reference:
 		http://www.digitalmars.com/d/lex.html
 -->
-<language id="d" name="D" version="2.0" _section="Sources">
+<language id="d" name="D" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-dsrc</property>
     <property name="globs">*.d</property>
