--- a/moo/mooedit/langs/actionscript.lang
+++ b/moo/mooedit/langs/actionscript.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="actionscript" name="ActionScript" version="2.0" _section="Sources">
+<language id="actionscript" name="ActionScript" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-actionscript</property>
     <property name="globs">*.as</property>
