--- a/moo/mooedit/langs/ada.lang
+++ b/moo/mooedit/langs/ada.lang
@@ -22,7 +22,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="ada" name="Ada" version="2.0" _section="Sources">
+<language id="ada" name="Ada" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-ada;text/x-adasrc</property>
     <property name="globs">*.adb;*.ads</property>
