--- a/moo/mooedit/langs/automake.lang
+++ b/moo/mooedit/langs/automake.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="automake" name="Automake" version="2.0" _section="Sources">
+<language id="automake" name="Automake" version="2.0" _section="Source">
   <metadata>
     <property name="globs">Makefile.am;GNUmakefile.am</property>
     <property name="line-comment-start">#</property>
