--- a/moo/mooedit/langs/bennugd.lang
+++ b/moo/mooedit/langs/bennugd.lang
@@ -19,7 +19,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="bennugd" name="BennuGD" version="2.0" _section="Sources">
+<language id="bennugd" name="BennuGD" version="2.0" _section="Source">
   <metadata>
     <property name="globs">*.prg</property>
     <property name="line-comment-start">//</property>
