--- a/moo/mooedit/langs/bluespec.lang
+++ b/moo/mooedit/langs/bluespec.lang
@@ -18,7 +18,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="bluespec" name="Bluespec SystemVerilog" version="2.0" _section="Sources">
+<language id="bluespec" name="Bluespec SystemVerilog" version="2.0" _section="Source">
   <metadata>
     <property name="globs">*.bsv</property>
     <property name="line-comment-start">//</property>
