--- a/moo/mooedit/langs/boo.lang
+++ b/moo/mooedit/langs/boo.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="boo" name="Boo" version="2.0" _section="Sources">
+<language id="boo" name="Boo" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-boo</property>
     <property name="globs">*.boo</property>
