--- a/moo/mooedit/langs/c.lang
+++ b/moo/mooedit/langs/c.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="c" name="C" version="2.0" _section="Sources">
+<language id="c" name="C" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-c;text/x-csrc;image/x-xpixmap</property>
     <property name="globs">*.c</property>
