--- a/moo/mooedit/langs/chdr.lang
+++ b/moo/mooedit/langs/chdr.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="chdr" name="C/C++/ObjC Header" version="2.0" _section="Sources">
+<language id="chdr" name="C/C++/ObjC Header" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-chdr;text/x-c++hdr</property>
     <property name="globs">*.hh;*.hp;*.hpp;*.h++;*.h</property>
