--- a/moo/mooedit/langs/cpp.lang
+++ b/moo/mooedit/langs/cpp.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="cpp" name="C++" version="2.0" _section="Sources">
+<language id="cpp" name="C++" version="2.0" _section="Source">
     <metadata>
       <property name="mimetypes">text/x-c++;text/x-cpp;text/x-c++src</property>
       <property name="globs">*.cpp;*.cxx;*.cc;*.C;*.c++</property>
