--- a/moo/mooedit/langs/csharp.lang
+++ b/moo/mooedit/langs/csharp.lang
@@ -23,7 +23,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="c-sharp" name="C#" version="2.0" _section="Sources">
+<language id="c-sharp" name="C#" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-csharpsrc;text/x-csharp</property>
     <property name="globs">*.cs</property>
