--- a/moo/mooedit/langs/cuda.lang
+++ b/moo/mooedit/langs/cuda.lang
@@ -19,7 +19,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="cuda" name="CUDA" version="2.0" _section="Sources">
+<language id="cuda" name="CUDA" version="2.0" _section="Source">
     <metadata>
       <property name="globs">*.cu;*.cuh</property>
       <property name="line-comment-start">//</property>
