--- a/moo/mooedit/langs/eiffel.lang
+++ b/moo/mooedit/langs/eiffel.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="eiffel" name="Eiffel" version="2.0" _section="Sources">
+<language id="eiffel" name="Eiffel" version="2.0" _section="Source">
 
   <metadata>
     <property name="mimetypes">text/x-eiffel</property>
