--- a/moo/mooedit/langs/erlang.lang
+++ b/moo/mooedit/langs/erlang.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="erlang" name="Erlang" version="2.0" _section="Sources">
+<language id="erlang" name="Erlang" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-erlang</property>
     <property name="globs">*.erl;*.hrl</property>
