--- a/moo/mooedit/langs/fortran.lang
+++ b/moo/mooedit/langs/fortran.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="fortran" name="Fortran 95" version="2.0" _section="Sources">
+<language id="fortran" name="Fortran 95" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-fortran</property>
     <property name="globs">*.f;*.f90;*.f95;*.for</property>
