--- a/moo/mooedit/langs/fsharp.lang
+++ b/moo/mooedit/langs/fsharp.lang
@@ -21,7 +21,7 @@
 
 -->
 
-<language id="fsharp" name="F#" version="2.0" _section="Sources">
+<language id="fsharp" name="F#" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-fsharp</property>
     <property name="globs">*.fs;</property>
