--- a/moo/mooedit/langs/haskell.lang
+++ b/moo/mooedit/langs/haskell.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="haskell" name="Haskell" version="2.0" _section="Sources">
+<language id="haskell" name="Haskell" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-haskell</property>
     <property name="globs">*.hs</property>
