--- a/moo/mooedit/langs/idl.lang
+++ b/moo/mooedit/langs/idl.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="idl" name="IDL" version="2.0" _section="Sources">
+<language id="idl" name="IDL" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-idl</property>
     <property name="globs">*.idl</property>
