--- a/moo/mooedit/langs/j.lang
+++ b/moo/mooedit/langs/j.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="j" name="J" version="2.0" _section="Sources">
+<language id="j" name="J" version="2.0" _section="Source">
   <metadata>
     <property name="globs">*.ijs</property>
     <property name="line-comment-start">NB\.</property>
