--- a/moo/mooedit/langs/makefile.lang
+++ b/moo/mooedit/langs/makefile.lang
@@ -19,7 +19,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="makefile" name="Makefile" version="2.0" _section="Sources">
+<language id="makefile" name="Makefile" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-makefile</property>
     <property name="globs">[Mm]akefile;GNUmakefile;*.make;*.mak;*.mk</property>
