--- a/moo/mooedit/langs/nemerle.lang
+++ b/moo/mooedit/langs/nemerle.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="nemerle" name="Nemerle" version="2.0" _section="Sources">
+<language id="nemerle" name="Nemerle" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-nemerle</property>
     <property name="globs">*.n</property>
