--- a/moo/mooedit/langs/netrexx.lang
+++ b/moo/mooedit/langs/netrexx.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="netrexx" name="NetRexx" version="2.0" _section="Sources">
+<language id="netrexx" name="NetRexx" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-netrexx</property>
     <property name="globs">*.nrx</property>
