--- a/moo/mooedit/langs/objc.lang
+++ b/moo/mooedit/langs/objc.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="objc" name="Objective-C" version="2.0" _section="Sources">
+<language id="objc" name="Objective-C" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-objcsrc</property>
     <property name="globs">*.m</property>
