--- a/moo/mooedit/langs/objj.lang
+++ b/moo/mooedit/langs/objj.lang
@@ -22,7 +22,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="objj" name="Objective-J" version="2.0" _section="Sources">
+<language id="objj" name="Objective-J" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-objective-j</property>
     <property name="globs">*.j</property>
