--- a/moo/mooedit/langs/ocaml.lang
+++ b/moo/mooedit/langs/ocaml.lang
@@ -23,7 +23,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="ocaml" name="OCaml" version="2.0" _section="Sources">
+<language id="ocaml" name="OCaml" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-ocaml</property>
     <property name="globs">*.ml;*.mli;*.mll;*.mly</property>
