--- a/moo/mooedit/langs/ooc.lang
+++ b/moo/mooedit/langs/ooc.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="ooc" name="OOC" version="2.0" _section="Sources">
+<language id="ooc" name="OOC" version="2.0" _section="Source">
   <metadata>
     <property name="globs">*.ooc</property>
     <property name="line-comment-start">//</property>
