--- a/moo/mooedit/langs/opencl.lang
+++ b/moo/mooedit/langs/opencl.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="opencl" name="OpenCL" version="2.0" _section="Sources">
+<language id="opencl" name="OpenCL" version="2.0" _section="Source">
   <metadata>
     <property name="globs">*.cl</property>
     <property name="line-comment-start">//</property>
