--- a/moo/mooedit/langs/pascal.lang
+++ b/moo/mooedit/langs/pascal.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="pascal" name="Pascal" version="2.0" _section="Sources">
+<language id="pascal" name="Pascal" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-pascal</property>
     <property name="globs">*.p;*.pas</property>
