--- a/moo/mooedit/langs/prolog.lang
+++ b/moo/mooedit/langs/prolog.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="prolog" name="Prolog" version="2.0" _section="Sources">
+<language id="prolog" name="Prolog" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-prolog</property>
     <property name="globs">*.prolog</property>
