--- a/moo/mooedit/langs/scala.lang
+++ b/moo/mooedit/langs/scala.lang
@@ -21,7 +21,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="scala" name="Scala" version="2.0" _section="Sources">
+<language id="scala" name="Scala" version="2.0" _section="Source">
 
   <metadata>
     <property name="mimetypes">text/x-scala</property>
