--- a/moo/mooedit/langs/scheme.lang
+++ b/moo/mooedit/langs/scheme.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="scheme" name="Scheme" version="2.0" _section="Sources">
+<language id="scheme" name="Scheme" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-scheme</property>
     <property name="globs">*.scm</property>
