--- a/moo/mooedit/langs/sml.lang
+++ b/moo/mooedit/langs/sml.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="sml" name="Standard ML" version="2.0" _section="Sources">
+<language id="sml" name="Standard ML" version="2.0" _section="Source">
   <metadata>
     <property name="globs">*.sml;*.sig</property>
     <property name="block-comment-start">(*</property>
