--- a/moo/mooedit/langs/systemverilog.lang
+++ b/moo/mooedit/langs/systemverilog.lang
@@ -18,7 +18,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="systemverilog" name="SystemVerilog" version="2.0" _section="Sources">
+<language id="systemverilog" name="SystemVerilog" version="2.0" _section="Source">
   <metadata>
     <property name="globs">*.sv;*.svh</property>
     <property name="line-comment-start">//</property>
