--- a/moo/mooedit/langs/vala.lang
+++ b/moo/mooedit/langs/vala.lang
@@ -24,7 +24,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="vala" name="Vala" version="2.0" _section="Sources">
+<language id="vala" name="Vala" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-vala</property>
     <property name="globs">*.vala;*.vapi</property>
