--- a/moo/mooedit/langs/verilog.lang
+++ b/moo/mooedit/langs/verilog.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="verilog" name="Verilog" version="2.0" _section="Sources">
+<language id="verilog" name="Verilog" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-verilog-src</property>
     <property name="globs">*.v</property>
