--- a/moo/mooedit/langs/vhdl.lang
+++ b/moo/mooedit/langs/vhdl.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="vhdl" name="VHDL" version="2.0" _section="Sources">
+<language id="vhdl" name="VHDL" version="2.0" _section="Source">
   <metadata>
     <property name="mimetypes">text/x-vhdl</property>
     <property name="globs">*.vhd</property>
