--- a/moo/mooedit/langs/dosbatch.lang
+++ b/moo/mooedit/langs/dosbatch.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="dosbatch" name="DOS Batch" version="2.0" _section="Scripts">
+<language id="dosbatch" name="DOS Batch" version="2.0" _section="Script">
   <metadata>
     <property name="globs">*.bat;*.cmd;*.sys</property>
     <property name="line-comment-start">rem</property>
