--- a/moo/mooedit/langs/javascript.lang
+++ b/moo/mooedit/langs/javascript.lang
@@ -23,7 +23,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="js" name="JavaScript" version="2.0" _section="Scripts">
+<language id="js" name="JavaScript" version="2.0" _section="Script">
   <metadata>
     <property name="mimetypes">application/javascript;application/x-javascript;text/x-javascript;text/javascript;text/x-js</property>
     <property name="globs">*.js;*.node</property>
