--- a/moo/mooedit/langs/m4.lang
+++ b/moo/mooedit/langs/m4.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="m4" name="m4" _section="Scripts" version="2.0">
+<language id="m4" name="m4" _section="Script" version="2.0">
   <metadata>
     <property name="mimetypes">application/x-m4</property>
     <property name="globs">*.m4;configure.ac;configure.in</property>
