--- a/moo/mooedit/langs/php.lang
+++ b/moo/mooedit/langs/php.lang
@@ -25,7 +25,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="php" name="PHP" version="2.0" _section="Scripts">
+<language id="php" name="PHP" version="2.0" _section="Script">
   <metadata>
     <property name="mimetypes">text/x-php;application/x-php;text/x-php-source;application/x-php-source</property>
     <property name="globs">*.php;*.php3;*.php4;*.phtml</property>
