--- a/moo/mooedit/langs/python3.lang
+++ b/moo/mooedit/langs/python3.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="python3" name="Python 3" version="2.0" _section="Scripts">
+<language id="python3" name="Python 3" version="2.0" _section="Script">
   <metadata>
     <property name="globs">*.py3</property>
     <property name="line-comment-start">#</property>
