--- a/moo/mooedit/langs/ruby.lang
+++ b/moo/mooedit/langs/ruby.lang
@@ -23,7 +23,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="ruby" name="Ruby" version="2.0" _section="Scripts">
+<language id="ruby" name="Ruby" version="2.0" _section="Script">
   <metadata>
     <property name="mimetypes">application/x-ruby;text/x-ruby</property>
     <property name="globs">*.rb;*.rake;Rakefile;Capfile;Gemfile</property>
