--- a/moo/mooedit/langs/tcl.lang
+++ b/moo/mooedit/langs/tcl.lang
@@ -20,7 +20,7 @@
  along with this library; if not, see <http://www.gnu.org/licenses/>.
 
 -->
-<language id="tcl" name="Tcl" version="2.0" _section="Scripts">
+<language id="tcl" name="Tcl" version="2.0" _section="Script">
   <metadata>
     <property name="mimetypes">text/x-tcl;application/x-tcl</property>
     <property name="globs">*.tcl;*.tk</property>
